browser size issues - made account page line up, nav logo goes to corner if too small

--- a/client/src/components/pages/Account.css
+++ b/client/src/components/pages/Account.css
@@ -103,7 +103,7 @@
   justify-content: flex-end;
   /* gap: -10px; */
   column-width: 250px;
-  column-gap: 0px;
+  column-gap: 10px;
   /* row-gap: 20px; */
   overflow-x: scroll;
   overscroll-behavior-x: contain;
@@ -177,4 +177,41 @@
   margin-left: auto;
   margin-right: auto;
   display: block;
+}
+
+.myinventory {
+  padding-top: 80%;
+}
+
+@media only screen and (min-width: 980px) {
+  .myinventory {
+    padding-top: 35%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .myinventory {
+    padding-top: 30%;
+  }
+}
+
+@media only screen and (min-width: 1400px) {
+  .myinventory {
+    padding-top: 28%;
+  }
+}
+
+.claimeditems {
+  padding-top: 50%;
+}
+
+@media only screen and (min-width: 1100px) {
+  .claimeditems {
+    padding-top: 40%;
+  }
+}
+@media only screen and (min-width: 1300px) {
+  .claimeditems {
+    padding-top: 33%;
+  }
 }
